opam-version: "1.2"
version: "0.3.4"
maintainer: "obiwanko@me.com"
authors: ["Kazuo Koga"]
homepage: "https://github.com/kkazuo/horned_worm"
bug-reports: "https://github.com/kkazuo/horned_worm/issues"
dev-repo: "https://github.com/kkazuo/horned_worm.git"
license: "MIT"
depends: [
  "async"           {>= "v0.11.0" & < "v0.12.0"}
  "cohttp-async"    {>= "1.0.2"}
  "logs"            {>= "0.6.2"}
  "re"              {>= "1.7.3"}
  "yojson"          {>= "1.4.0"}
  "dune"            {build & >= "1.0.1"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
available: [ ocaml-version >= "4.03.0" ]
