opam-version: "2.0"
name: "horned_worm"
version: "0.3.4"
synopsis: "An easy functional Web app micro framework"
description: """
An easy functional Web app micro framework.
You can create REST API server with composable functions.
"""
maintainer: "obiwanko@me.com"
authors: ["Kazuo Koga"]
license: "MIT"
homepage: "https://github.com/kkazuo/horned_worm"
bug-reports: "https://github.com/kkazuo/horned_worm/issues"
dev-repo: "git+https://github.com/kkazuo/horned_worm.git"
depends: [
  "ocaml"           {>= "4.03.0"}
  "async"           {>= "v0.11.0" & < "v0.12.0"}
  "cohttp-async"    {>= "1.0.2"}
  "logs"            {>= "0.6.2"}
  "re"              {>= "1.7.3"}
  "yojson"          {>= "1.4.0"}
  "dune"            {build & >= "1.0.1"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
